# Document-Manager

./: .env.example  .gitignore  README.md  docker-compose.yml  main_server.py  model_client.py  parse.py  pyproject.toml  requirements.txt
dev/: Dockerfile  prerequisite.md  setup.sh
src/DocManager/: _utils.py
src/DocManager/chatbot_backend/: backend_data.py  chatbot_feature.py  prompt.py  style_filtering.py  temp_database.py  tree_components.py
src/DocManager/pdf_extraction/: extraction_data.py  html_generation.py  html_template.py  pdf_extraction.py  prompt.py  segmentation.py
temp/: new_draw_bbox.py
